# json-literal-py

./: README.md  pyproject.toml
json_literal/: __init__.py
tests/: test_json_literal.py
